test/fails/test2.jl
using Test

@test true
@test 3 == 1 + 2
@test 5 == 1
@test false
@test false
